--- a/BookTest.html
+++ b/BookTest.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <table>
-      <caption>Hunter's Favorite Books</caption>
+      <caption>Some of Hunter's Favorite Books</caption>
       <thead>
         <tr>
           <td>Year</td>
